# mysticai-whisper

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: large-v2-detect-new.py  large-v2-detect.py  new_pipeline.py  pipeline.dockerfile  pipeline.yaml
