[project]
name = "mysticai-whisper"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Zakhar Kogan", email = "36503576+zakhar-kogan@users.noreply.github.com"},
]
dependencies = [
    "torch",
    "transformers",
    "pipeline-ai",
    "optimum",
    "accelerate",
    "ninja",
    "packaging",
    "flash-attn",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"
[tool.pdm.scripts]
start.cmd = "src/large-v2-detect.py"
start.env_file = ".env"
