[project]
name = "mysticai-whisper"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Zakhar Kogan", email = "36503576+zakhar-kogan@users.noreply.github.com"},
]
dependencies = [
    "torch",
    "transformers",
    "pipeline-ai",
    "optimum",
    "accelerate",
    "ninja>=1.11.1.1",
    "packaging>=23.2",
    "flash-attn>=2.4.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"
[tool.pdm.scripts]
start.cmd = "src/large-v2-detect.py"
start.env_file = ".env"
